# NES

./: .gitignore  .gitmodules  README.md
3dthings/: Einfach Nema.ipt  Einfach Nema.stl  Platte Nema.ipt  Platte Nema.stl  Platte.ipt  Platte.stl  Zweifach Nema.ipt  Zweifach Nema.stl
CAN/: can vortrag.aux  can vortrag.blg  can vortrag.nav  can vortrag.tex  can vortrag.toc
arduino/Blink/: Blink.ino
arduino/LSM303-Heading/: Heading.ino
arduino/LSM303-Serial/: LSM303-Serial.ino
arduino/MultiStepper/: Makefile  Makefile.duemilanove
arduino/MultiStepper/tmp/home/koslowski/Arduino/hardware/arduino/avr/cores/arduino/: wiring_digital.d  wiring_shift.d
arduino/MultiStepper/tmp/tmp/: MultiStepper.d
arduino/Ramp/: Ramp.ino
arduino/Ramp/tmp/home/koslowski/Arduino/hardware/arduino/avr/cores/arduino/: WInterrupts.d  wiring.d  wiring_analog.d
backup/arduino/: .gitmodules
backup/arduino/LSM303-Calibrate/: Calibrate.ino
backup/arduino/MultiStepper/: MultiStepper.ino
backup/arduino/MultiStepper/tmp/home/koslowski/Arduino/hardware/arduino/avr/cores/arduino/: hooks.d
backup/arduino/Ramp/tmp/home/koslowski/Arduino/hardware/arduino/avr/cores/arduino/: wiring_pulse.d
backup/ethercat/tkRAD/: CHANGES.md
backup/ethercat/tkRAD/core/: defer.py  events.py  options.py  services.py  struct_dict.py
backup/ethercat/tkRAD/easy/: builder.py  builder2.py
backup/ethercat/tkRAD/easy/doc/: pydoc-builder2.html
backup/ethercat/tkRAD/widgets/: rad_dialog.py  rad_frame.py  rad_mainwindow.py  rad_statusbar.py
backup/ethercat/tkRAD/xml/: rad_xml_attribute.py  rad_xml_frame.py  rad_xml_menu.py  rad_xml_widget.py  rad_xml_window.py
backup/i2c/: CMakeLists.txt  lsm303.h
backup/i2c/lib/: CMakeLists.txt  LSM303.cpp  i2cfunc.c  i2cfunc.h
backup/liveplot/: plot-plane.py
backup/lsm303/: LSM303.h  Wire.h
backup/moveplane/: plot-plane.py
backup/protobuf/: test.py
backup/serial-cpp/: read  read.c
controller/: CMakeLists.txt  Doxyfile  client.py
controller/can-overlay/: 01_build.sh  02_install.sh  03_activate.sh  04_modprobe.sh  05_settings.sh  activate.sh  build.sh  install.sh  modprobe.sh
controller/service/: etc_init.d_canbus  etc_init.d_nes-daemon  etc_network_interfaces
controller/src/: CMakeLists.txt  client.py  controller-daemon.cpp  controller-daemon.h  messages.proto  motor-client.py  motor-daemon.cpp  motor-daemon.h  sensor-client.py  sensor-daemon.cpp  sensor-daemon.h
controller/src/lib/: CMakeLists.txt  I2CBus.cpp  I2CBus.h  LSM303.cpp  LSM303.h  messages.proto  nes-can.cpp  nes-can.h  nes-socket.cpp  nes-socket.h  nes.cpp  nes.h
ethercat/gui-master/: ec-gui-master.py  tkRAD
ethercat/tkRAD/: README.md  __init__.py
ethercat/tkRAD/core/: __init__.py  async.py  checkups.py  database.py  i18n.py  path.py  tools.py  uri.py
ethercat/tkRAD/easy/doc/: pydoc3-builder.html
ethercat/tkRAD/widgets/: rad_application.py  rad_canvas.py  rad_widget_base.py  rad_window.py  rad_window_base.py
ethercat/tkRAD/xml/: rad_xml_attributes_dict.py  rad_xml_base.py  rad_xml_mainwindow.py  rad_xml_widget_base.py
i2c/: CMakeLists.txt  lsm303  lsm303.c  lsm303.h  test  test.c  test.cpp
i2c/lib/: CMakeLists.txt
intermediate-presi/: functionalspecification.eps  intermediate.tex
liveplot/: plot-heading.py  plot-plane.py
lsm303/: LSM303.cpp  LSM303.h  Wire.cpp  test_lsm303.cpp
moveplane/: minnow_move_plane.py  move-plane.py
profibus/: profibus.tex
protobuf/: CMakeLists.txt  sensor.proto  test.cpp
serial-cpp/: read.cpp
socket/: CMakeLists.txt  client.py  daemon.c  daemon.h  move-plane.py
vorstellung/: functionalspecification.eps  vorstellung.aux  vorstellung.blg  vorstellung.nav  vorstellung.out  vorstellung.tex  vorstellung.toc
vorstellung/diagrams/: functionalspecification.vsd
vortraege/final/: final functional specification.vsd  final.tex
vortraege/mathis_CAN/: can vortrag.aux  can vortrag.nav
vortraege/vorstellung/: vorstellung.aux  vorstellung.tex
